--- a/css/my.css
+++ b/css/my.css
@@ -1,3 +1,169 @@
+ 
+.formd input[type="radio"]{
+
+    display: none;
+}
+
+.formd .radio {
+    color: #0774D9;
+    background-color: rgba(0,0,0,.1);
+    padding: 5px 15px;
+    display: inline-block;
+    position: relative;
+    font-size: 1em;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.formd .radio:hover{
+    background-color: rgba(0,116,217,0.1);
+}
+
+.formd input[type="radio"]:checked + label {
+    padding: 5px 15px;
+    background-color: #0774D9;
+    border-radius: 3px;
+    color: #fff;
+
+}
+
+
+
+.formd input[type="radio"]:checked + label:before {
+    display: none;
+
+}
+.formd .radio:before{
+    content: " ";
+     width: 17px;
+    height: 17px;
+    display: inline-block;
+    background-color: none;
+    border: 3px solid #0774D9;
+    position: absolute;
+    border-radius: 50%;
+    left: 17px;
+    top: 4px;
+
+
+}
+
+input[type="range"]{
+
+}
+
+.slider.slider-horizontal .slider-selection, .slider.slider-horizontal .slider-track-low, .slider.slider-horizontal .slider-track-high {
+    height: 100%;
+    top: 0;
+    bottom: 0;
+}
+
+.slider-track-low, .slider-track-high {
+    position: absolute;
+    background: transparent;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+.slider.slider-horizontal {
+    width: 210px;
+    height: 20px;
+}
+.slider {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+}
+
+.slider-track {
+    height: 10px;
+    width: 100%;
+    margin-top: -5px;
+    top: 50%;
+    left: 0;
+}
+.well {
+    background-color: #E0E0E0;
+}
+.well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+
+
+.slider.slider-horizontal .slider-tick, .slider.slider-horizontal .slider-handle {
+    margin-left: -10px;
+    margin-top: -5px;
+    height: 20px;
+    background-color: #337ab7;
+}
+.slider-track {
+    position: absolute;
+    cursor: pointer;
+}
+.slider-handle.round {
+    border-radius: 50%;
+}
+.slider-handle {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: #337ab7;
+    background-image: -webkit-linear-gradient(top, #149bdf 0%, #0480be 100%);
+    background-image: -o-linear-gradient(top, #149bdf 0%, #0480be 100%);
+    background-image: linear-gradient(to bottom, #149bdf 0%, #0480be 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf', endColorstr='#ff0480be', GradientType=0);
+    filter: none;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    border: 0px solid transparent;
+}
+
+
+
+
+#ex1Slider .slider-selection {
+    background: #BABABA;
+}
+
+
+.star{
+    color:red;
+    font-size: 16pt;
+}
+.donate {
+    float: left;
+}
+.donate .blue {
+    color: white;
+    background-color: #337ab7;
+    border: 1px solid #2e6da4;
+    border-radius: 4px;
+}
+
+.donate input:checked + span {
+    color: white;
+    background-color: #5DACF1;
+    border-radius: 1px;
+}
+.donate label span {
+    text-align: center;
+    font-size: 13px;
+    padding: 7px 3px;
+    display: block;
+    cursor: pointer;
+    width: 100px;
+}
+
+
  .myfooter{
 	 min-height: 60px; background-color: #337ab7; color: white; text-align:center;padding:10px;
 	 
